--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "materialize-css": "^1.0.0",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-scripts": "3.2.0"
@@ -34,5 +35,5 @@
         "concurrently": "^5.0.0",
         "json-server": "^0.15.1"
     },
-    "proxy": "http://localhost/5000"
+    "proxy": "http://localhost:5000"
 }
